--- a/composer.json
+++ b/composer.json
@@ -12,38 +12,52 @@
 		"php": ">=5.3.0",
 		"laravel/framework": "4.0.*",
 		"twbs/bootstrap": "dev-master",
-		 "laravel/framework": "4.0.*",
+		"zizaco/confide": "1.0.x",
+		"zizaco/entrust": "dev-master",
+		"jasonlewis/basset": "dev-master",
+		"robclancy/presenter": "1.0.*",
+        "j20/php-uuid": "dev-master",
+        "bllim/datatables": "*",
 		"way/generators": "dev-master"
-	
 	},
 	"require-dev": {
 		"php": ">=5.3.0",
-        "way/generators": "dev-master",
-         "twbs/bootstrap": "dev-master",
-		 "laravel/framework": "4.0.*",
-		"way/generators": "dev-master"
+        "laravel/framework": "4.0.*",
+		"twbs/bootstrap": "dev-master",
+		"zizaco/confide": "1.0.x",
+		"zizaco/entrust": "dev-master",
+		"jasonlewis/basset": "dev-master",
+		"robclancy/presenter": "1.0.*",
+        "j20/php-uuid": "dev-master",
+        "bllim/datatables": "*",
+		"way/generators": "dev-master",
+        "mockery/mockery": "dev-master@dev",
+        "summerstreet/woodling": "0.1.*",
+        "barryvdh/laravel-ide-helper": "dev-master",
+        "leafo/lessphp": "v0.4.0",
+        "natxet/CssMin": "dev-master",
+        "lmammino/jsmin4assetic": "1.0.*"
 	},
 	"autoload": {
 		"classmap": [
 			"app/commands",
 			"app/controllers",
+            "app/library",
 			"app/models",
+			"app/presenters",
 			"app/database/migrations",
 			"app/database/seeds"
 		]
 	},
 	"scripts": {
-		"post-install-cmd": [
-			"php artisan optimize"
-		],
 		"pre-update-cmd": [
 			"php artisan clear-compiled"
 		],
-		"post-update-cmd": [
+		"post-install-cmd": [
 			"php artisan optimize"
 		],
-		"post-create-project-cmd": [
-			"php artisan key:generate"
+		"post-update-cmd": [
+			"php artisan optimize"
 		]
 	},
 	"config": {
