--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ app/config/app.php
 app/config/database.php
 app/config/production/app.php
 app/config/production/database.php
+app/config/production--/database.php
+app/config/production--/app.php
