--- a/composer.json
+++ b/composer.json
@@ -8,30 +8,14 @@
             "email": "mrakodol@gmail.com"
         }
     ],
+	"license": "GPL",
 	"require": {
-		"php": ">=5.3.0",
-		"laravel/framework": "4.0.*",
-		"zizaco/confide": "1.0.x",
+		"laravel/framework": "4.1.*",
+		"zizaco/confide": "3.1.x",
 		"zizaco/entrust": "dev-master",
-		"robclancy/presenter": "1.0.*",
-        "j20/php-uuid": "dev-master",
+		"robclancy/presenter": "1.1.*",
         "bllim/datatables": "*",
 		"way/generators": "dev-master"
-	},
-	"require-dev": {
-		"php": ">=5.3.0",
-        "laravel/framework": "4.0.*",
-		"zizaco/confide": "1.0.x",
-		"zizaco/entrust": "dev-master",
-		"robclancy/presenter": "1.0.*",
-        "j20/php-uuid": "dev-master",
-        "bllim/datatables": "*",
-		"way/generators": "dev-master",
-        "mockery/mockery": "dev-master@dev",
-        "summerstreet/woodling": "0.1.*",
-        "barryvdh/laravel-ide-helper": "dev-master",
-        "leafo/lessphp": "v0.4.0",
-        "lmammino/jsmin4assetic": "1.0.*"
 	},
 	"autoload": {
 		"classmap": [
@@ -46,17 +30,20 @@
 	},
 	"scripts": {
 		"pre-update-cmd": [
-			"php artisan clear-compiled"
+			"php artisan clear-compiled",
+			"php artisan optimize"
 		],
 		"post-install-cmd": [
-			"php artisan optimize"
+			"php artisan optimize",
+			"php artisan key:generate"
 		],
-		"post-update-cmd": [
-			"php artisan optimize"
+		"post-create-project-cmd": [
+			"php artisan key:generate"
 		]
+	
 	},
 	"config": {
 		"preferred-install": "dist"
 	},
-	"minimum-stability": "dev"
+	"minimum-stability": "stable"
 }
