requirements are not met
 generators dev-master had to be change to lover version, otherwise minimal requirements are not met

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 		"zizaco/entrust": "dev-master",
 		"robclancy/presenter": "1.1.*",
         "bllim/datatables": "*",
-		"way/generators": "dev-master"
+		"way/generators": "~2.0"
 	},
 	"autoload": {
 		"classmap": [
