--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,8 @@
-**bootstrap/compiled.php
-**vendor
+/bootstrap/compiled.php
+/vendor
 composer.phar
-.project
 composer.lock
+.env.*.php
+.env.php
 .DS_Store
-app/config/app.php
-app/config/database.php
-app/config/production
-app/config/local
-app/config/production/app.php
-app/config/production/database.php
-app/config/local/app.php
-app/config/local/database.php
-**public/avatar
-**public/blog
-**public/customform
-**public/gallery
-**public/page
+Thumbs.db
