--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,14 @@
             "email": "mrakodol@gmail.com"
         }
     ],
-	"license": "GPL",
+	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.1.*",
-		"zizaco/confide": "3.1.x",
-		"zizaco/entrust": "dev-master",
-		"robclancy/presenter": "1.1.*",
-        "bllim/datatables": "*",
-		"way/generators": "dev-master"
+		"laravel/framework": "4.2.*",
+        "zizaco/confide": "~3.2",
+        "zizaco/entrust": "~1.2",
+		"robclancy/presenter": "1.3.*",
+        "bllim/datatables": "~1.3",
+		"way/generators": "~2.6"
 	},
 	"autoload": {
 		"classmap": [
@@ -25,22 +25,22 @@
 			"app/models",
 			"app/presenters",
 			"app/database/migrations",
-			"app/database/seeds"
+			"app/database/seeds",
+			"app/tests/TestCase.php"
 		]
 	},
 	"scripts": {
-		"pre-update-cmd": [
+		"post-install-cmd": [
 			"php artisan clear-compiled",
 			"php artisan optimize"
 		],
-		"post-install-cmd": [
-			"php artisan optimize",
-			"php artisan key:generate"
+		"post-update-cmd": [
+			"php artisan clear-compiled",
+			"php artisan optimize"
 		],
 		"post-create-project-cmd": [
 			"php artisan key:generate"
 		]
-	
 	},
 	"config": {
 		"preferred-install": "dist"
